# aeris-modsdk-py

./: .gitignore  README.md  README_Udp0.md  key.pem  pyproject.toml
aerismodsdk/: aerisutils.py  cli.py  gpioutils.py  loggerutils.py  module.py  modulefactory.py  quectel.py  rmutils.py  shoulder_tap.py  telit.py  telitmodule.py  ublox.py
aerismodsdk/modules/: module.py  quectel.py  telit.py  ublox.py
aerismodsdk/utils/: aerisutils.py  gpioutils.py  loggerutils.py  rmutils.py
tests/: test_aeris_modsdk_py.py  test_quectel.py  test_shoulder_tap.py
