[tool.poetry]
name = "aerismodsdk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyusb = "^1.0.2"
pyserial = "^3.4"
"RPi.GPIO" = "^0.7.0"
xmodem = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
aeriscli = "aerismodsdk.cli:mycli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

